# cpp-ai-learn

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  setup.sh
cmake/: ProjectTargets.cmake  ProjectWarnings.cmake
datasets/: README.md
libs/: PPP_support.h  PPPheaders.h
src/algos_search/: CMakeLists.txt  linear.h  main.cpp  tmp.cpp
src/algos_search/bench/: bench_algos_search.cpp
src/algos_search/tests/: test_linear.cpp
src/algos_sort/: CMakeLists.txt  insertion_sort.h  main.cpp  merge_sort.h
src/algos_sort/bench/: bench_insertion_sort.cpp
src/algos_sort/tests/: test_insertion_sort.cpp  test_main.cpp
src/hello_world/: CMakeLists.txt
src/hello_world/tests/: test_main.cpp
src/pr_numstat/: CMakeLists.txt  main.cpp  numstat.cpp  numstat.h
src/pr_numstat/tests/: test_main.cpp
src/roadmap_problems/: CMakeLists.txt  main.cpp  roadmap_problems.h  tmp.cpp
src/roadmap_problems/bench/: bench_roadmap_problems.cpp
src/roadmap_problems/tests/: test_main.cpp
src/shad_learn/: CMakeLists.txt  easy.cpp  easy.h  leetcode.h  main.cpp
src/shad_learn/leetcode/: pr_0136.cpp  pr_0217.cpp  pr_1.cpp  pr_1480.cpp
src/shad_learn/tests/: test_easy.cpp  test_leet_pr_0136.cpp  test_leet_pr_0217.cpp  test_leet_pr_1.cpp  test_leet_pr_1480.cpp
src/tmpls/: CMakeLists.txt  main.cpp
src/tmpls/tests/: test_main.cpp
